# ilist

./: .travis.yml  CHANGELOG.md  README.md  appveyor.yml  ilist.cabal  stack.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
bench/: Functions.hs  Main.hs  bench.hs
lib/Data/List/: Index.hs
src/Data/List/: Index.hs
tests/: Main.hs  tests.hs
