name:                ilist
version:             0.1.0.0
synopsis:            Functions for lists with access to index
description:
  Functions for lists with access to index
homepage:            http://github.com/aelve/ilist
bug-reports:         http://github.com/aelve/ilist/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            List
tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/ilist.git

library
  exposed-modules:     Data.List.Index
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <5
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  default-language:    Haskell2010
